1998-10-25  Alex Roberts  <bse@dial.pipex.com>

	* Fixed 'gEdit unable to compile with Gtk+ 1.0.x' bug.. Modified LOTS
	  of files.. mostly putting in '#ifdef GTK_HAVE_FEATURES_1_1_0' -
	  Please remember people.. If you add any Gtk+ 1.1.x ONLY things, 
	  please put in #ifdef GTK_HAVE_FEATURES_1_1_0, some people only run
	  Gtk+ 1.0.x, and dont want the hastle of using Gtk+ 1.1.x (and having
	  Gimp broken ;)...

1998-10-24  Alex Roberts  <bse@dial.pipex.com>

	- Bah... lets remember...
	* toolbar.c: (gE_create_toolbar): Checks preferences file for haveing
	toolbar buttons reliefed... if TRUE, sets RELIEF, if FALSE, does
	nothing..
	
	* toolbar.[ch]: tb_relief_on/tb_relief_off : new callbacks for menu
	
	* menus.c: Added tb_relief_on/off to Toolbar menu...
	
	- (Relief only works with Gtk+ 1.1.x)

1998-10-23  Martin Baulig  <martin@home-of-linux.org>

	* src/gE_plugin.c (load_library): Call g_module_make_resistent ().

	* src/gE_plugin.h (GE_PLUGIN_LOG_DOMAIN): Define to `gEdit-Plugin'.
	If included from a plugin, set G_LOG_DOMAIN to GE_PLUGIN_LOG_DOMAIN
	and include <gnome.h> after that.

	* src/geditrc: New file.
	* src/msgbox.c (msgbox_create): Change widget name and call
	gtk_widget_ensure_style () to load a style from the geditrc.

	* src/msgbox.c (log_handler): New static function.
	(msgbox_create): Call g_log_set_handler () to let non-fatal messages
	go to the message box.

1998-10-23  Martin Baulig  <martin@home-of-linux.org>

	* src/gE_plugin.h (gE_Plugin_StartFunc): New function typedef.
	(gE_Plugin): Added `start_func'. This is called to create a new
	instance of a plugin while the `init_func' is only called once
	when the plugin is loaded.

	* src/gE_plugin.c (gE_Plugin_Load): If the plugin is already loaded,
	call it's `start_func'. When first loading the plugin, we only call
	the `init_func' which is responsible for calling the `start_func'.

	* src/gE_plugin_api.c (gE_plugin_create_widget): Added GtkWidget **