@@ -1,5 +1,11 @@
 1998-10-25  Alex Roberts  <bse@dial.pipex.com>
 
+	* gE_document.c: (gE_document_set_read_only): Changes File label to
+	  show a visible reminder that the file open is Read-Only or not..
+	  (**FIX-ME** This is kinda broke on Untitled files ;)...
+
+1998-10-25  Alex Roberts  <bse@dial.pipex.com>
+
 	* Fixed 'gEdit unable to compile with Gtk+ 1.0.x' bug.. Modified LOTS
 	  of files.. mostly putting in '#ifdef GTK_HAVE_FEATURES_1_1_0' -
 	  Please remember people.. If you add any Gtk+ 1.1.x ONLY things, 
